--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,9 @@ typings/
 
 # dotenv environment variables file
 .env
+.env.dev
 .env.test
+.env.production
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
