--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/server.js",
     "build": "NODE_ENV=production tsc  --target ES2017 --experimentalDecorators --emitDecoratorMetadata",
     "dev": "NODE_ENV=dev ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -27,6 +27,7 @@
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.8",
     "ts-node-dev": "^1.0.0",
+    "tsconfig-paths": "^3.11.0",
     "typescript": "^4.0.3"
   }
 }
